--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=AA9079D84EB18D0905776981460465CC
 ProjectName=Third Person BP Game Template
+CopyrightNotice=Copyright of Pixel Piratez
+
