--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=IsleOfPlunder
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/DevelopmentMap.DevelopmentMap
-GameDefaultMap=/Game/Maps/DevelopmentMap.DevelopmentMap
+EditorStartupMap=/Game/Maps/Minimal_Default.Minimal_Default
+GameDefaultMap=/Game/Maps/Minimal_Default.Minimal_Default
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -64,6 +64,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/IsleOfPlunder")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/IsleOfPlunder")
+bUseFixedFrameRate=False
+FixedFrameRate=15.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
